[gd_scene load_steps=3 format=3 uid="uid://dh0d00qslh10a"]

[ext_resource type="Script" path="res://scripts/Gods/god.gd" id="1_vwefc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0mnba"]
size = Vector2(64, 64)

[node name="god" type="Node2D"]
script = ExtResource("1_vwefc")
timeMov = null

[node name="godPicture" type="Sprite2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 49

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_0mnba")

[node name="moveTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="moveTimer" to="." method="_on_time_between_moves_timeout"]
